Blog and Mega menu changes
Blog and Mega menu changes

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,9 @@
     padding: 0;
     margin-right: 0;
 }
+.mega-menu-bg.bg-prime-color img {
+    width: 100%;
+}
 .menu-link, .dropdown-toggle.nav-link {
     font-size: 1rem;
     text-decoration: none;
