--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -106,6 +106,32 @@ nav.bg-body-white.py-3.bg-grey.navbar.navbar-expand-lg.navbar-light {
 }
 
 @media (max-width:991.99px){
+    .menu-link, .dropdown-toggle.nav-link {
+        font-size: 1.1rem;
+         font-weight: 550;
+      
+    }
+    .mega-menu-bg.bg-prime-color img {
+        width: 100%;
+        height: 137px;
+        object-fit: cover;
+        margin-bottom: 1rem;
+    }
+    .mega-menu-bg.bg-prime-color h4 {
+      
+        padding-left: 0;
+    }
+    .navbar-collapse {
+        flex-basis: 100%;
+        flex-grow: 1;
+        align-items: center;
+        padding: 2rem  1rem 2rem;
+    }
+    a.menu-link.primary-link-btn {
+        margin-top: 1rem;
+        display: block;
+        /* margin: 0 auto; */
+    }
     .footer-component a.footer-log-inline {
         width: 200px;
         display: inline-block;
